<resources>
    <!--****** App ******-->
    <string name="app_name">PowerConsumptionManager</string>
    <string name="title_activity_main">Power Consumption Manager</string>

    <!--****** Units ******-->
    <string name="unit_km">km</string>
    <string name="unit_kw">kW</string>
    <string name="unit_percentage">%</string>
    <string name="unit_kwh">kWh</string>

    <!--****** Activity main activity ******-->
    <string name="drawer_header">Power Consumption Manager</string>
    <string name="drawer_menu1">Overview</string>
    <string name="drawer_menu2">Automatic</string>
    <string name="drawer_menu3">Power chart</string>
    <string name="drawer_menu4">Cost statistics</string>
    <string name="drawer_menu5">Settings</string>
    <string name="drawer_open">Opened navigation drawer</string>
    <string name="drawer_close">Closed navigation drawer</string>

    <!--****** Fragment offline ******-->
    <string name="text_offline">The Power Consumption Manager seems to be unreachable. Please go to <i>Settings</i>
        and check if you are in the same network and if the IP address is set correctly.</string>
    <string name="menu_retry">Retry</string>

    <!--****** Fragment overview ******-->
    <string name="title_frag_overview">Overview</string>
    <string name="text_autarchy">Autarchy</string>
    <string name="text_selfsupply">"Selfsupply"</string>
    <string name="text_consumption">Consumption</string>
    <string name="menu_daily">Daily</string>
    <string name="menu_now">Now</string>
    <string name="toast_dashboard_update_error">Error while updating dashboard data</string>

    <!--****** Fragment consumption data ******-->
    <string name="title_frag_consumption">Consumption</string>
    <string name="chart_connection_error_title">Connection error.</string>
    <string name="chart_connection_error_description">Check your entered IP address.</string>
    <string name="chart_no_data">No data available.</string>
    <string name="list_device_error">No devices found.</string>
    <string name="toast_chart_update_error">Error while updating chart data</string>
    <string name="text_loading_consumption_data">Loading consumption data…</string>
    <string name="text_error_loading_consumption_data">Error while loading consumption data…</string>

    <!--****** Fragment charge plan ******-->
    <string name="title_frag_plan">Charge plan</string>
    <string name="instance_title">Emobil</string>
    <string name="text_route_information_route_to">to</string>
    <string name="text_route_information_distance">Distance:</string>
    <string name="text_route_information_duration">Duration:</string>
    <string name="text_route_information_no_data">No or incorrect origin/destination.</string>
    <string name="text_route_information_error">Error occurred while loading route information.</string>
    <string name="text_route_information_no_route">No route information available.</string>
    <string name="text_information_no_description">Description not set.</string>
    <string name="format_caldroid_info_title">MMMM dd yyyy</string>
    <string name="format_caldroid_info_timerange">hh:mm a.</string>

    <!--****** Fragment cost statistics ******-->
    <array name="general_statistics_labels">
        <item>Überschuss</item>
        <item>Eigenverbrauch</item>
        <item>Netzbezug</item>
    </array>
    <string name="menu_refresh">Refresh</string>
    <string name="text_loading_cost_statistics">Loading cost statistics…</string>
    <string name="text_error_loading_cost_statistics">Error while loading cost statistics…</string>
    <string name="text_refreshing_cost_statistics">Refreshing cost statistics…</string>

    <!--****** Fragment settings ******-->
    <string name="category_general">General</string>
    <string name="category_network">Network configuration</string>
    <string name="category_help">Help</string>
    <string name="text_pref_calendar_title">Google Calendar</string>
    <string name="text_pref_calendar_summary">Use google calendar to manage charge plan</string>
    <string name="text_pref_update_automatically_title">Update data automatically</string>
    <string name="text_pref_update_interval_title">Update interval</string>
    <string name="text_pref_update_interval_summary">Update data every</string>
    <string name="text_pref_cost_statistics_period_title">Cost statistics</string>
    <string name="text_pref_cost_statistics_period_summary">Load statistics from last</string>
    <string name="text_pref_cost_statistics_period_summary_days">days</string>
    <string name="text_pref_complete_restart_title">Restart app to load new components</string>
    <string name="text_pref_complete_restart_to_load_new_components">Restarting app to load newly connected components…</string>
    <string name="text_pref_ip_title">IP address</string>
    <string name="text_pref_help_title">Do you need help?</string>
    <string name="text_pref_help_summary">Contact Mr. Prof. Zogg under david.zogg@fhnw.ch</string>
    <string name="toast_ip_invalid">IP invalid</string>
    <string name="toast_sync_started">Synchronizing…</string>
    <string name="toast_sync_ended_success">Synchronisation finished</string>
    <string name="toast_sync_ended_error_interrupted">Synchronisation interrupted</string>
    <string name="toast_sync_ended_error">Synchronisation failed</string>

    <!--****** Activity splash screen ******-->
    <string name="title_activity_splash">Power Consumption Manager</string>
    <string name="text_splash_info">Loading data from Power Consumption Manager…</string>
    <string name="text_splash_settings_changed">Power Consumption Manager loading with new settings…</string>
    <string name="text_splash_retry_connecting">Retrying to load data from Power Consumption Manager…</string>
    <string name="text_permission_warning">All requested permissions are essential to use this app</string>
    <string name="text_init_ip">IP:</string>
    <string name="text_init_dot">.</string>
    <string name="text_init_ip_error">Number between 0 and 255</string>
    <string name="text_init_description">Enter the IP address of a device, where the server component is running on.</string>
    <string name="button_continue">Continue</string>
    <string name="image_content_description">Progressbar</string>

    <!--****** Activity component settings ******-->
    <string name="menu_save_component_settings">Save</string>
    <string name="title_activity_component_settings">Component settings</string>
    <string name="title_activity_actionbar">Settings for</string>
    <string name="text_loading_component_settings">Loading settings for component…</string>
    <string name="text_error_loading_component_settings">Error while loading component settings</string>
    <string name="toast_save_component_settings_info">Saving your settings...</string>
    <string name="toast_save_component_settings_status">Saving of component settings successful</string>
    <string name="toast_error_save_component_settings_status">Error while saving component settings</string>
    <string name="dialog_button_close">Close</string>

    <!--****** Setting PCMSetting ****** -->
    <string name="text_eco">Eco</string>
    
    <!--****** Setting PCMPlan ****** -->
    <array name="weekdays">
        <item>Mo</item>
        <item>Tu</item>
        <item>We</item>
        <item>Th</item>
        <item>Fr</item>
        <item>Sa</item>
        <item>Su</item>
    </array>
    <string name="text_departure_time">Departure</string>
    <string name="text_arrival_time">Arrival</string>
    <string name="text_charged_energy">Charged Energy</string>
    <string name="text_distance_reachable">Distance reachable</string>
    <string name="text_plugged">Plugged</string>
    <string name="text_plugged_true">Yes</string>
    <string name="text_plugged_false">No</string>
    <string name="text_charge_state_emobil">Charge state of Emobil</string>

    <!--****** Setting PCMPlan ****** -->
    <string name="text_automatic">Automatic</string>

    <!--****** Setting PCMSlider ****** -->
    <string name="text_value">Value:</string>
    <string name="text_min">Min:</string>
    <string name="text_max">Max:</string>

    <!--****** Calendar broadcast receiver ******-->
    <string name="toast_br_sync_success">Synchronisation with PCM finished</string>
    <string name="toast_br_sync_no_connection">Synchronisation with PCM currently not possible</string>
    <string name="action_settings">Settings</string>

</resources>
