<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group_main_menu"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/ic_home"
            android:title="@string/drawer_menu1"
            android:checked="true" />
        <item
            android:id="@+id/nav_connected_devices"
            android:icon="@mipmap/ic_connected_device"
            android:title="@string/drawer_menu2" />
        <item
            android:id="@+id/nav_consumption_data"
            android:icon="@mipmap/ic_chart"
            android:title="@string/drawer_menu3" />
        <item
            android:id="@+id/nav_cost_statistic"
            android:icon="@mipmap/ic_cost_statistic"
            android:title="@string/drawer_menu4" />
    </group>
    <group
        android:id="@+id/group_advanced_menu"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_settings"
            android:icon="@mipmap/ic_settings_black"
            android:title="@string/drawer_menu5" />
    </group>
</menu>