<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/category_network">

        <ch.fhnw.ip5.powerconsumptionmanager.util.IPSettingDialog
            android:dialogTitle="@string/text_pref_ip_title"
            android:dialogLayout="@layout/dialog_ip_settings"
            android:positiveButtonText="@android:string/ok"
            android:negativeButtonText="@android:string/cancel"
            android:key="IP"
            android:title="@string/text_pref_ip_title"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/title_frag_plan">

        <Preference
            android:key="syncPlan"
            android:title="Synchronize charging plan"
            android:summary="@string/text_pref_sync_summary"
            android:icon="@mipmap/settings_synchronized_icon"/>

    </PreferenceCategory>
</PreferenceScreen>